--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-flask==2.0.1
+flask==2.3.3
+werkzeug==2.3.7
 pandas==1.3.3
 matplotlib==3.4.3
 seaborn==0.11.2
+SQLAlchemy==1.4.23
+flask-sqlalchemy==3.0.2
 numpy==1.21.2
 tk==0.1.0
-sqlite3==2.6.0
